--- a/html/css/aelua.css
+++ b/html/css/aelua.css
@@ -1,11 +1,11 @@
 body{
-border-style:none;
-border:none;
-outline:none;
-margin:0px;
-padding:0px;
-font-family: Verdana, Tahoma, "Myriad Web", Syntax, sans-serif;
-font-size: 12px;
+	border-style:none;
+	border:none;
+	outline:none;
+	margin:0px;
+	padding:0px;
+	font-family: Verdana, Tahoma, "Myriad Web", Syntax, sans-serif;
+	font-size: 16px;
 
 	color: #000;	
 	background: #fff;
@@ -14,22 +14,27 @@ font-size: 12px;
 }
 
 
-ul, li {margin: 0px; list-style-type:none; padding-left:16; padding-right:16; }
+ul, li {
+	margin: 0px;
+	list-style-type:none;
+	padding-left:16;
+	padding-right:16;
+}
 
 img {
-border-style:none;
-border:none;
-outline:none;
-margin:0px;
-padding:0px;
+	border-style:none;
+	border:none;
+	outline:none;
+	margin:0px;
+	padding:0px;
 }
 
 a {
-border-style:none;
-border:none;
-outline:none;
-margin:0px;
-padding:0px;
+	border-style:none;
+	border:none;
+	outline:none;
+	margin:0px;
+	padding:0px;
 }
 
 a:link {
@@ -49,17 +54,48 @@ a:hover {
 	text-decoration: underline;
 }
 
-  
-.zero {
-border-style:none;
-border:none;
-outline:none;
-margin:0px;
-padding:0px;
-overflow-x:hidden;
+
+.aelua_base {
+
+	margin: auto;
+	width: 960px;
+	position: relative;
+	
+}
+
+.aelua_twocol_head {
+
+	width: 960px;
+}
+
+.aelua_twocol_wide {
+
+	width: 640px;
+	float: left;
+}
+
+.aelua_twocol_side {
+
+	width: 320px;
+	float: right;
+}
+
+.aelua_twocol_foot {
+
+	width: 960px;
+	clear: both;
 }
 
 
 
 
+.aelua_foot_data {
+
+	margin: auto;
+	width: 960px;
+	position: relative;
+	
+	font-size: 8px;
+	text-align: center;
+}
 
