--- a/html/css/aelua.css
+++ b/html/css/aelua.css
@@ -1,5 +1,6 @@
 html{
 	overflow-y: scroll;
+	height:100%;
 }
 
 body{
@@ -12,9 +13,11 @@ body{
 	font-size: 16px;
 
 	color: #000;	
-	background: #fff;
-	background-image: url(/css/img/top_shadow_to_white.png);
-	background-repeat: repeat-x;
+	background-image: url(/css/img/shadow-sides-960-alpha.png) ;
+	background-position: 50% 0;
+	background-repeat: repeat-y;
+	background-color: #fff;
+	
 }
 
 
@@ -64,7 +67,7 @@ a:hover {
 	margin: auto;
 	width: 960px;
 	position: relative;
-	
+	background-color: #fff;
 }
 
 .aelua_home_bar {
@@ -73,6 +76,7 @@ a:hover {
 	width: 960px;
 	position: relative;
 
+	background-color: #fff;
 }
 
 .aelua_user_bar {
@@ -81,6 +85,7 @@ a:hover {
 	width: 960px;
 	position: relative;
 
+	background-color: #fff;
 }
 
 .aelua_about {
