css button hacks

--- a/html/css/aelua.css
+++ b/html/css/aelua.css
@@ -13,7 +13,7 @@ body{
 	font-size: 16px;
 
 	color: #000;	
-	background-image: url(/css/img/shadow-sides-960-alpha.png) ;
+	background-image: url(/css/img/back.960.png) ;
 	background-position: 50% 0;
 	background-repeat: repeat-y;
 	background-color: #fff;
