--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -27,12 +27,14 @@ body{
 a:focus		{color: #444; text-decoration: none;}
 a:link		{color: #444; text-decoration: none;}
 a:visited	{color: #444; text-decoration: none;}
-a:hover		{color: #444; text-decoration: none;}
+a:hover		{color: #444; text-decoration: underline;}
 a:active	{color: #444; text-decoration: none;}
+/* Main container */
 div.cont{
 	width: 960px;
 	margin: auto;
 }
+/* Main container horizontal line */
 div.line{	
 	border-bottom:1px dotted #000000;
 	
@@ -40,11 +42,13 @@ div.line{
 	margin: 0px;
 	float:left;
 }
+/* Header image */
 div.header{
 	width: 960px;
 	height: 180px;
 	margin: auto;
 }
+/* div small fonts */
 div.desc{
 	font-family: Georgia, serif;
 	color: #374548;
@@ -58,7 +62,8 @@ div.desc{
 .desc a:link		{color: #779494; text-decoration: none;}
 .desc a:visited		{color: #779494; text-decoration: none;}
 .desc a:hover		{color: #779494; text-decoration: underline;}
-.desc a:active		{color: #779494; text-decoration: underline;}
+.desc a:active		{color: #779494; text-decoration: none;}
+/* div big bold fonts */
 div.chunk{
 	font-family: Georgia, serif;
 	color: #374548;
@@ -73,17 +78,20 @@ div.chunk{
 .chunk a:link		{color: #779494; text-decoration: none;}
 .chunk a:visited	{color: #779494; text-decoration: none;}
 .chunk a:hover		{color: #779494; text-decoration: underline;}
-.chunk a:active		{color: #779494; text-decoration: underline;}
+.chunk a:active		{color: #779494; text-decoration: none;}
+/* CRUMBS container */
 div.chunk1{
 	margin: 0px;
 	width: 480px;
 	float:left;
 }
+/* LOGIN container */
 div.chunk2{
 	margin: 0px;
 	width: 480px;
 	float:right;
 }
+/* Basic menu headers*/
 div.chunk3{
 	background-color: #e3e3e3;
 	border-top-left-radius: 8px 8px;
@@ -112,6 +120,7 @@ div.chunk3line{
 	width: 550px;
 	margin: auto;
 }
+/* Icon navigation container*/
 div.chunk4{
 	background-color: #e3e3e3;
 	border-bottom-left-radius: 8px 8px;
@@ -124,6 +133,7 @@ div.chunk4{
 	padding: 0px 5px 5px 5px;
 	float: left;
 }
+/* HUD container */
 div.chunk5{
 	background-color: #e3e3e3;
 	border-bottom-left-radius: 8px 8px;
@@ -136,6 +146,29 @@ div.chunk5{
 	padding: 5px;
 	float: right;
 }
+/* ALERT container ie. Please login, click to join. */
+div.chunk6{
+	background-color: #fff;
+	border-radius: 8px 8px;
+	border:1px dotted #ccc;
+	margin: auto;
+	margin-top: 20px;
+	width: 920px;
+	padding: 5px;
+}
+/* ALERT fonts */
+div.alert{
+	font-family: Georgia, serif;
+	color: #374548;
+	font-size: 18px;
+	text-align: center;
+}
+.alert a:focus		{color: #ff5555; font-weight: bold; text-decoration: none;}
+.alert a:link		{color: #ff5555; font-weight: bold; text-decoration: none;}
+.alert a:visited	{color: #ff5555; font-weight: bold; text-decoration: none;}
+.alert a:hover		{color: #ff5555; font-weight: bold; text-decoration: underline;}
+.alert a:active		{color: #ff5555; font-weight: bold; text-decoration: none;}
+/* Big button menu */
 div.menu{
 	margin: auto;
 	width: 624px;
@@ -189,6 +222,7 @@ div.menun{
 div.clear{
 	clear: both;
 }
+/* Icon navigation icons */
 div.act{
 	background-color: #555;
 	border-radius: 8px;
@@ -209,6 +243,23 @@ div.act1p{
 	width: 50px;
 	margin: 5px 10px 5px 10px;
 }
+div.actp{
+	width: 50px;
+	margin: 10px 20px 0px 50px;
+}
+div.actn{
+	font-family: Georgia, serif;
+	color: #ffffff;
+	font-size: 12px;
+	line-height: 1.0em;
+	font-weight: bold;
+	text-align:center;
+
+	width: 130px;
+	margin: 5px 5px 10px 5px;
+	float:left;
+}
+/* HUD icons */
 div.hud{
 	background-color: #555;
 	border-radius: 8px;
@@ -253,6 +304,7 @@ div.hudline{
 	margin: 0px;
 	float:left;
 }
+/* smaller HUD icons */
 div.hud2{
 	width: 80px;
 	margin: 0px;
@@ -283,22 +335,7 @@ div.hud2n{
 	margin: 0px;
 	float:left;
 }
-div.actp{
-	width: 50px;
-	margin: 10px 20px 0px 50px;
-}
-div.actn{
-	font-family: Georgia, serif;
-	color: #ffffff;
-	font-size: 12px;
-	line-height: 1.0em;
-	font-weight: bold;
-	text-align:center;
-
-	width: 130px;
-	margin: 5px 5px 10px 5px;
-	float:left;
-}
+/* Login Logout buttons */
 div.log{
 	width: 400px;
 	margin: 0px;
@@ -309,6 +346,7 @@ div.log1{
 	margin: 0px;
 	float:left;
 }
+/* Red Login button */
 div.log2{
 	background-color: #ff5555;
 	width: 80px;
@@ -352,6 +390,7 @@ div.logn{
 .logn a:visited		{color: #374548; text-decoration: none;}
 .logn a:hover		{color: #374548; text-decoration: underline;}
 .logn a:active		{color: #374548; text-decoration: none;}
+/* CRUMBS */
 div.crum{
 	width: 560px;
 	margin: 0px;
@@ -360,17 +399,17 @@ div.crum{
 div.crumit{
 	font-family: Georgia, serif;
 	color: #374548;
-	font-size: 21px;
+	font-size: 16px;
 	font-weight: bold;
 
 	width: 550px;
-	margin: 5px 0px;
+	margin: 10px 0px;
 	float:left;
 }
 .crumit a:focus		{color: #00d400; text-decoration: none;}
 .crumit a:link		{color: #374548; text-decoration: none;}
 .crumit a:visited	{color: #374548; text-decoration: none;}
-.crumit a:hover		{color: #00d400; text-decoration: none;}
+.crumit a:hover		{color: #00d400; text-decoration: underline;}
 .crumit a:active	{color: #00d400; text-decoration: none;}
 div.crumn{
 	font-family: Georgia, serif;
@@ -382,6 +421,7 @@ div.crumn{
 	margin: 0px;
 	float:left;
 }
+/* FOOTER */
 div.foot{
 	background-color: #f7f7f7;
 	font-family: Georgia, serif;
@@ -394,5 +434,5 @@ div.foot{
 .foot a:focus		{color: #ffcc00; text-decoration: none;}
 .foot a:link		{color: #ffcc00; text-decoration: none;}
 .foot a:visited		{color: #ffcc00; text-decoration: none;}
-.foot a:hover		{color: #ffcc00; text-decoration: none;}
+.foot a:hover		{color: #ffcc00; text-decoration: underline;}
 .foot a:active		{color: #ffcc00; text-decoration: none;}
