input text go dark.

--- a/hoe-house/html/css/hoe.css
+++ b/hoe-house/html/css/hoe.css
@@ -334,7 +334,7 @@ div.pro1d1 {
 }
 /*PROFILE INFO Form Input container */
 div.pro1d input {
-	color: #ccc;
+	color: #374548;
 	width: 320px;
 	height: 30px;
 	margin: 0;
